corrigiendo errores en crud explorers y agregando el modelo

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://postgres:1234@localhost:5432/explorers2_api?schema=public"
+DATABASE_URL="postgresql://postgres:1234@localhost:5432/explorers_api?schema=public"
 PORT = 3000
