--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "node ./node_modules/.bin/jest",
     "linter": "node ./node_modules/eslint/bin/eslint.js .",
     "linter-fix": "node ./node_modules/eslint/bin/eslint.js . --fix",
-    "serve": "node ./lib/server.js"
+    "start": "node ./lib/server.js"
   },
   "repository": {
     "type": "git",
